src/style.css
/* ... */
/*PROFILE*/

/*ORDER*/
.order__list {
    padding-right: 8px;
    padding-left: 16px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.order {
    width: calc(100% - 44px);
    height: 180px;
    list-style: none;
    margin-bottom: 8px;
    border: 2px solid var(--Primary);
    border-radius: 16px;
}

.order__head {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 8px;
}

.order__close {
    width: 50px;
    height: 50px;
    margin-right: 12px;
    margin-left: auto;
    margin-top: 16px;
    background-image: url('../src/assets/close-green.svg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.order__close--black {
    background-image: url('../src/assets/close-black.svg');
}

.order__box {
    width: 100%;
    height: calc(100% - 20px);
    padding: 10px 20px;
    border-radius: 12px;
    display: flex;
    align-items: center;
}

.order__box:hover {
    border: none;
    background-color: var(--Primary);
}

.order__box:hover .order__data p {
    color: var(--white);
  }

.order__snapshot {
    background-color: var(--Black);
    width: 40%;
    height: 100%;
    border-radius: 6px;
    color: var(--white);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.order__snapshot img {
    width: 100%;
    height: 100%;
    border-radius: 6px;
}

.order__data {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 80%;
    margin-right: 2%;
}

.order__data p span {
    font-weight: 700;
}

.order_adress__box {
    width: 100%;
    display: flex;
}

.order__adress__box p {
    display: inline-block;
}

.order__status {
    font-weight: 700;
    font-size: 24px;
    width: 100%;
    margin-left: 0;
}

.order__status span {
    color: var(--Black);
}

.order__status--accepted {
    color: var(--Secondary);
}

.order__status--production {
    color: var(--Tertiary);
}

.order__status--preparing {
    color: var(--Tertiary);
}

.order__status--delivering {
    color: var(--Tertiary);
}

.order__status--arrived {
    color: var(--Contrast-Green);
}

.order__status--canceled {
    color: var(--Contrast-Red);
}

.order__status--setup {
    color: var(--Contrast-Green);
}

.customer span {
    color: var(--Secondary);
}

.order__options select {
    width: 100%;
    height: 60px;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-bottom: 10%;
    text-align: start;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 16px;
}

.order__options button {
    width: 100%;
    height: 60px;
    padding: 8px 16px;
    border: 1px solid #ccc;
    border-radius: 4px;
    background-color: #FF4769;
    color: #fff;
    cursor: pointer;
    font-size: 16px;
}

/*CONFIRM(ED)*/
.confirm, .confirmed {
    background-image: url("../src/assets/Swear-Back.jpg");
    background-size: cover;
    background-position: center;
}

.confirm__content, .confirmed__content {
    background-color: #FFF;
    height: calc(100% - 140px);
    width: 94%;
    margin-left: 3%;
    border-radius: 12px;
}


.confirm__title, .confirmed__title {
    color: #69ff47;
    margin-top: 8px;
    margin-left: 24px;
}

.confirm__order, .confirmed__order {
    width: calc(100% - 40px);
    height: 80%;
    display: flex;
    align-items: center;
    margin: 20px 20px;
}

.confirm__order__data, .confirmed__order__data {
    margin-left: 10%;
    width: calc(40% -40px);
}

.confirm__order__status, .confirmed__order__status, .admin__order__status {
    margin-left: 20px;
    width: 100%;
}

/*POPUPS*/
.popup {
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    display: none;
}

.open__popup {
    display: flex;
    justify-content: center;
    align-items: center;
}

.popup__background {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    position: absolute;
    top: 0;
    left: 0;
}

.popup__content {
    width: 36%;
    height: 36%;
    padding: 2%;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: absolute;
    top: 30%;
    left: 30%;
    background-color: var(--Primary);
    border-radius: 24px;
}

.popup__content h2 {
    font-size: 40px;
    font-weight: 700;
    color: var(--white);
    margin: 0;
}

.popup__content p {
    font-size: 24px;
    font-weight: 400;
    color: var(--white);
    margin: 0;
    margin-top: 24px;
}

.popup__options {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 40%;
    margin-top: 24px;
    margin-left: 30%;
}

.popup__option {
    font-size: 24px;
    text-transform: uppercase;
    font-weight: 700;
    padding: 16px 32px;
    border-radius: 8px;
    margin-left: -16px;
    margin-right: 32px;
}

/*LOGOUT*/
.logout__btn {
    width: 60%;
    height: 40px;
    padding: 8px 16px;
    margin-top: 16px;
    border-radius: 4px;
    border: none;
    background-color: var(--Secondary);
    color: var(--white);
    cursor: pointer;
    font-size: 24px;
    font-weight: 700;
    text-transform: uppercase;
}

.logout__btn:hover {
    background-color: var(--Primary);
}

@media screen and (max-width: 1300px) {
    .logout__btn {
        width: 140px;
    }
}

/*LOADING*/
.loading__state {
    width: 100vw;
    height: 100vh;
    text-align: center;
    position: absolute;
    z-index: 5;
    top: 0;
    left: 0;
}

.loading__state p {
    margin-top: 25%;
    font-size: 24px;
}

